--- a/funding/templates/api.html
+++ b/funding/templates/api.html
@@ -10,21 +10,21 @@
             </p>
             <p>
                 <ul>
-                    <li><a href="#api_convert_wow_usd">/api/1/convert/aeon-usd</a></li>
+                    <li><a href="#api_convert_wow_usd">/api/1/convert/{{ name }}-usd</a></li>
                     <li><a href="#api_proposals">/api/1/proposals</a></li>
                 </ul>
             </p>
             <br>
 
             <div class="api_container" id="api_convert_wow_usd">
-                <h5><small>GET</small> <code>/api/1/convert/aeon-usd</code></h5>
+                <h5><small>GET</small> <code>/api/1/convert/{{ name }}-usd</code></h5>
                 <hr>
                 <p>
-                    AEON to USD conversion. Data is pulled from Bittrex.com and CoinMarketCap.com
+                    {{ name }} to USD conversion. Data is pulled from Bittrex.com and CoinMarketCap.com
                 </p>
 
                 <b>Example:</b>
-                <pre>curl -vvX GET 'https://aeonfunding.com/api/1/convert/aeon-usd?amount=1000'</pre>
+                <pre>curl -vvX GET 'https://{{server}}/api/1/convert/{{ name }}-usd?amount=1000'</pre>
 
                 <b>Response:</b>
                 <pre>{"usd": 729.82}</pre>
@@ -45,7 +45,7 @@
                 </ul>
 
                 <b>Example:</b>
-                <pre>curl -vvX GET 'https://aeonfunding.com/api/1/proposals?offset=0&limit=1&status=2'</pre>
+                <pre>curl -vvX GET 'https://{{server}}/api/1/proposals?offset=0&limit=1&status=2'</pre>
 
                 <b>Response:</b>
                 <pre>{
