--- a/funding/templates/base.html
+++ b/funding/templates/base.html
@@ -10,25 +10,25 @@
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
 
     <meta property="fb:app_id" content="0" />
-    <meta property="og:image" content="https://aeonfunding.com/aeon.png" />
-    <meta property="og:description" content="AEON Funding System - Projects by the community funded by the community" />
-    <meta property="og:url" content="https://aeonfunding.com/" />
-    <meta property="og:title" content="AEON Funding System" />
+    <meta property="og:image" content="https://{{server}}/aeon.png" />
+    <meta property="og:description" content="{{name}} Funding System - Projects by the community funded by the community" />
+    <meta property="og:url" content="https://{{server}}/" />
+    <meta property="og:title" content="{{name}} Funding System" />
     <meta property="og:type" content="website" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#ffffff">
-    <meta name="apple-mobile-web-app-title" content="AEON Funding System">
-    <meta name="application-name" content="AEON Funding System">
+    <meta name="apple-mobile-web-app-title" content="{{name}} Funding System">
+    <meta name="application-name" content="{{name}} Funding System">
     <meta name="msapplication-TileColor" content="#2c7dda">
     {% if proposal %}
         <meta name="description" content="{{proposal.content[:50]}}" />
-        <title>AEON Funding System - {{proposal.headline[:20]}}</title>
+        <title>{{name}} Funding System - {{proposal.headline[:20]}}</title>
     {% else %}
-        <meta name="description" content="AEON Funding System - Community based projects funded by the AEON community" />
-        <title>AEON Funding System</title>
+        <meta name="description" content="{{name}} Funding System - Community based projects funded by the {{name}} community" />
+        <title>{{name}} Funding System</title>
     {% endif %}
-    <meta name="keywords" content="monero, xmr, bitmonero, cryptocurrency, crypto money, mining crypto currencies, virtual currency, aeon, aeon cash, wownero is best">
+    <meta name="keywords" content="monero, xmr, bitmonero, cryptocurrency, crypto money, mining crypto currencies, virtual currency, aeon, aeon cash, remix">
 
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap-grid.min.css" rel="stylesheet">
