add remix image; change to context_processor for globals in templates

--- a/funding/templates/base.html
+++ b/funding/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
 
     <meta property="fb:app_id" content="0" />
-    <meta property="og:image" content="https://{{server}}/aeon.png" />
+    <meta property="og:image" content="/static/{{coinpng}}" />
     <meta property="og:description" content="{{name}} Funding System - Projects by the community funded by the community" />
     <meta property="og:url" content="https://{{server}}/" />
     <meta property="og:title" content="{{name}} Funding System" />
