create parameter for coin in about template

--- a/funding/templates/proposal/edit.html
+++ b/funding/templates/proposal/edit.html
@@ -65,7 +65,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Target <small>(in AEON)</small></label>
+                        <label>Target <small>(in {{name}})</small></label>
                         <input {% if funds_target %}disabled{% endif %} id="funds_target" type="text" name="funds_target" class="form-control" placeholder="Target" value="{{ funds_target }}">
                     </div>
 
