--- a/funding/templates/about.html
+++ b/funding/templates/about.html
@@ -11,7 +11,7 @@
         <div class="col-lg-8">
             <hr>
             <p>
-               The AEON Funding System was put in to action by members of the AEON Community. Our goal is to have our community members fund each other in order to help AEON grow. For the love of all things crypto, someone give me a sentence to put here as I am not a writer.
+               The {{name}} Funding System was put in to action by members of the {{name}} Community. Our goal is to have our community members fund each other in order to help {{name}} grow. For the love of all things crypto, someone give me a sentence to put here as I am not a writer.
             </p>
             
 
@@ -20,9 +20,9 @@
             </p>
 
             <ul>
-                <li>IRC: chat.freenode.org #aeon</li>
-                <li>Discord: <a href="https://discord.gg/78eGQ4d" target="_blank">https://discord.gg/78eGQ4d</a></li>
-                <li>E-mail: aeoncommunity [ at ] protonmail.com</li>
+                <li>IRC: chat.freenode.org #{{irc}}</li>
+                <li>Discord: <a href="{{discord_url}}" target="_blank">{{discord_url}}</a></li>
+                <li>E-mail: {{email}}</li>
             </ul>
              <p>
                 We do not keep access logs or install tracking cookies. All static resources (javascript/stylesheets/images) are self-hosted. This funding system is a fork of the Wownero Funding System. 
