--- a/funding/templates/base.html
+++ b/funding/templates/base.html
@@ -50,7 +50,7 @@
 <!-- Footer -->
 <footer class="bg-dark footer">
     <div class="container">
-        <p class="m-0 text-center text-white">AEONFunding.com</p>
+        <p class="m-0 text-center text-white">{{server}}</p>
     </div>
 </footer>
 
