--- a/funding/templates/navbar.html
+++ b/funding/templates/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
         <a class="navbar-brand" href="/">
-            <img id="logo" src="/static/{{name}}.png">
+            <img id="logo" src="/static/{{coinpng}}">
             <span class="logo-text">{{name}} Funding System</span>
         </a>
         <a class="navbar-brand-mobile" href="/" style="font-family:monospace;display:none;">{{name}} Funding System</a>
