update settings; update coin name in html

--- a/funding/templates/proposal/edit.html
+++ b/funding/templates/proposal/edit.html
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Receiving address for withdrawals <small>(Your AEON address)</small></label>
+                        <label>Receiving address for withdrawals <small>(Your {{name}} address)</small></label>
                         <input {% if addr_receiving %}disabled{% endif %} id="addr_receiving" type="text" name="addr_receiving" class="form-control" placeholder="Wm..." value="{{ addr_receiving }}">
                     </div>
 
