--- a/funding/templates/proposal/macros/navbar.html
+++ b/funding/templates/proposal/macros/navbar.html
@@ -18,7 +18,7 @@
                 </div>
                 <div id="point-wow-left">
                     <img src="/static/point-left.png" style="margin-left: 10px;width: 60px;">
-                    <span style="color: #fc4dff;font-size: 16px;font-style: italic;font-weight: bold;margin-left: 6px;">wow</span>
+                    <span style="color: #fc4dff;font-size: 16px;font-style: italic;font-weight: bold;margin-left: 6px;">{{name}}</span>
                 </div>
             </div>
         </div>
