--- a/funding/templates/base.html
+++ b/funding/templates/base.html
@@ -7,7 +7,7 @@
 
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
-    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/{{coin_favicon}}" type="image/x-icon" />
 
     <meta property="fb:app_id" content="0" />
     <meta property="og:image" content="/static/{{coinpng}}" />
